--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-span {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  cursor: pointer; 
-  color: rgba(255,255,255,0.8);
-  font-size: 24px;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
+body {
+  font-family: 'Josefin Sans', sans-serif;
 }
