--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -3,11 +3,14 @@
     background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf   100%);
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 10px;
+    position: fixed;
+    width: 100%;
 }
 
 .main-nav {
     list-style-type: none;
 }
+
 
 .nav-links,
 .logo {
@@ -38,9 +41,51 @@
     display: none;
 }
 
-.active {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.active_Nav {
+    display: grid;
+    text-align: center;
     list-style-type: none;
+    margin: 15px auto;
   }
+
+
+
+   @media screen and (min-width: 768px) { 
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 0;
+        height: 70px;
+        align-items: center;
+        position:fixed;
+        width: 100%;
+    }
+
+    .main-nav {
+        display: flex;
+        margin-right: 30px;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+
+    .main-nav li {
+        margin: 0;
+    }
+
+    .nav-links {
+        margin-left: 40px;
+    }
+
+    .logo {
+        margin-top: 0
+    }
+    .navbar-toggle {
+        display: none;
+     }
+ 
+     .logo:hover,
+     .nav-links:hover {
+         color: rgba(255, 255, 255, 1);
+     }
+}
