--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,13 @@
 }
 
 body {
-  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Josefin Sans', sans-serif; */
+  /* font-family: 'Coda Caption', sans-serif; */
+  font-family: 'Oxygen', sans-serif;
+  /* font-family: 'Krona One', sans-serif; */
   line-height: 1.6;
 }
-@media (min-width:800px){
+@media (min-width:768px){
   .main-container {
     width: 800px;
 margin-left: auto;
