--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -5,7 +5,8 @@
   .paragraph{
     font-size: 14px;
     padding-left: 10px;
-    padding-right: 10px
+    padding-right: 10px;
+    margin-bottom: 40px;
   
   }
   .image-container{
@@ -15,25 +16,32 @@
     padding-top: 100px;
       width: 200px;
   }
-  .btn-container {
- text-align: center;
+
+  .btn-container{
+display: flex;
+justify-content: center;
+flex-wrap: nowrap;
   }
   .btn-download {
-    width: 80%;
-    margin-top: 19px;
-    border: none;
-    color: #ffffff;
-    padding: 10px 10px;
+    border: 1px solid
+    #562A84;
+    color:
+    #562A84;
+    padding: 12px 20px;
     cursor: pointer;
-    font-size: 14px;
-    background-color: #562A84;
+    font-size: 16px;
+    background-color:
+    #fff;
+    border-radius: 30px;
+    margin: 10px;
   }
   
   .begin_home {
     font-weight: 700;
     font-size: 28px;
+    color: #562A84;
   }
- @media (min-width: 800px){
+ @media (min-width: 768px){
   .btn-container {
     text-align: none;
      }
@@ -53,7 +61,7 @@
     
     }
     .paragraph_home {
-      display: grid; 
+      padding-top: 180px;
       align-items: center;
       line-height: 1.6;
       text-align: justify;
@@ -65,20 +73,33 @@
     
     }
     .btn-download {
-      width: 100%;
-      margin-top: 0px;
-      border: none;
-      color: #ffffff;
-      padding: 12px 30px;
-      cursor: pointer;
-      font-size: 20px;
-      background-color: #562A84;
+      border: 1px solid
+#562A84;
+color:
+#562A84;
+padding: 12px 20px;
+cursor: pointer;
+font-size: 20px;
+background-color:
+#fff;
+border-radius: 30px;
+margin: 10px;
     
     }
+    .btn-download:hover {
+      border: 1px solid#562A84;
+color:#fff;
+padding: 12px 20px;
+cursor: pointer;
+font-size: 20px;
+background-color:#562A84;
+border-radius: 30px;
+margin: 10px;
     
-    
-    .begin_home {
-      font-weight: 700;
-      font-size: 28px;
     }
+    .btn-container{
+      display: flex;
+      justify-content: center;
+      flex-wrap: nowrap;
+        }
 } 
